# to_do-web-app

./: .gitignore  Cargo.toml  README.md  state.json
css/: base.css  main.css
docker/compose/: docker-compose.yml
javascript/: main.js
migrations/2022-08-02-060732_create_to_do_items/: up.sql
migrations/2022-08-25-064036_create_users/: down.sql  up.sql
src/: database.rs  main.rs  processes.rs  schema.rs  state.rs
src/json_serialization/: to_do_items.rs
src/models/item/: item.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs  token.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  mod.rs  utils.rs
templates/: main.html
templates/components/: header.html
