[package]
name = "todo_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {versione = "1.0", deafult-feature = false, features = ["alloc"]}
actix-web = "2"
actix-rt = "1.0"
futures = "0.3.5"
serde = "1"
actix-service = "1.0.6"
diesel = {version = "1.4.4", features = ["postgres"]}
dotenv = "0.15.0"
bcrypt = "0.8.2"
uuid = {version = "0.8", features = ["serde", "v4"]}